활동 소개페이지를 업데이트 합니다.

--- a/data/activity.yml
+++ b/data/activity.yml
@@ -198,55 +198,133 @@ ko:
     slug: domestic_solidarity
     활동소개:
       title: 활동소개
-      slug: domestic_solidarity
+      slug: introductions    
+      section_01: 일본군성노예제 문제 인식을 확산하고, 문제 해결을 위한 국내 여론을 조성하기 위해 노력하고 있습니다.
+      목록:
+        - title: 대정부사업
+        - body: 2015 한일합의 무효와 일본군성노예제 문제의 정의로운 해결을 요구하는 활동을 합니다.
+        - title: 평화비 전국연대
+        - body: 전국 각지의 평화비 건립 주체들과 네트워크를 형성하여 일본군성노예제 문제의 정의로운 해결을 위해 활동합니다.
+        - title: 기지촌여성인권연대
+        - body: 2008년 ‘기지촌여성과 함께 하는 여성연대(가칭)를 결성하고 기지촌여성인권 침해사건의 실태 파악 활동 및 관련 심포지엄 개최 등 연대하고 있습니다. 한국내 기지촌 미군위안부 국가손해배상청구소송, 기지촌성매매 여성지원 법률과 경기도 기지촌 여성 지원 등에 관한 조례 제정 등을 위해 함께 활동합니다.
+    국내연대사업소식:
+      title: 소식 보러가기
+      slug: activities
+      url: "/categories/연대사업"        
   international_solidarity:
     title: "국제 연대"
     slug: international_solidarity
     아시아연대회의:
       title: 아시아연대회의
-      slug:
+      slug: Asian_Solidarity_Conference
+      body: 내용이 필요합니다.
     법정:
       title: 2000년법정
-      slug:
+      slug: International_War_Crimes_Tribunal
     UN:
       title: UN
-      slug: un
+      slug: United_Nations
+      body: 내용이 필요합니다.      
     해외연대단체:
       title: 해외연대단체
-      slug: international_solidarity_organization
+      slug: International_Solidarity_Organization
+      body: 내용이 필요합니다.      
     결의안:
       title: 결의안
-      slug:
+      slug: Resolution
+      body: 내용이 필요합니다.      
+    국외연대사업소식:
+      title: 소식 보러가기
+      slug: activities
+      url: "/categories/updates/"
+  lawsuit:
+    title: "법적대응"
+    slug: lawsuit
+    활동소개:
+      title: 활동소개
+      slug: introductions    
+      section_01: 일본군성노예제 문제 인식을 확산하고, 문제 해결을 위한 국내 여론을 조성하기 위해 노력하고 있습니다.
+      section_02: 일본군성노예제 문제 인식을 확산하고, 문제 해결을 위한 국내 여론을 조성하기 위해 노력하고 있습니다.
+    국내법적대응:
+      title: 국내 법적대응
+      slug: activities
+      url: "/categories/일본국상대소송/"
+    국외법적대응:
+      title: 국외 법적대응
+      slug: activities
+      url: "/categories/일본국상대소송/"
   memorial:
     title: "기억.기림"
     slug: memorial
     기림일:
       title: 8.14 기림일
-      slug: 0814-memorialday       
+      slug: 0814-memorialday  
+      목록:
+        - title: 평화비건립지원
+        - body: 2012년 12월, 제11차 일본군 위안부 문제 해결을 위한 아시아연대회의에 참석한 8개 아시아 피해국 피해자 및 지원단체 활동가들은 고 김학순할머니가 피해사실을 공개증언한 날인 8월 14일을 세계 일본군‘위안부’ 기림일로 선포하였습니다. 2013년 1회 기림일을 시작으로 2019년 7회 기림일을 맞았습니다. 대한민국 정부는 2017년 12월 일본군’위안부’피해자의 명예회복을 위해 8월14일을 국가기념일(일본군’위안부’피해자 기림의 날)로 지정하고 기념식을 진행하고 있습니다.
+        - title: 세계일본군’위안부’기림일
+        - body: 2012년 12월, 제11차 일본군 위안부 문제 해결을 위한 아시아연대회의에 참석한 8개 아시아 피해국 피해자 및 지원단체 활동가들은 고 김학순할머니가 피해사실을 공개증언한 날인 8월 14일을 세계 일본군‘위안부’ 기림일로 선포하였습니다. 2013년 1회 기림일을 시작으로 2019년 7회 기림일을 맞았습니다. 대한민국 정부는 2017년 12월 일본군’위안부’피해자의 명예회복을 위해 8월14일을 국가기념일(일본군’위안부’피해자 기림의 날)로 지정하고 기념식을 진행하고 있습니다.
+        - title: 길원옥여성평화상
+        - body: 평화와 통일, 여성인권을 위해 적극적으로 활동하고 있는 국내 여성 활동가를 발굴 및 지원하기 위한 상으로, 길원옥 할머니가 ‘제1회 이화기독여성평화상’ 초대 수상자로 받으신 상금 1백만 원을 기부하신 것을 씨앗기금으로 하여 2017년 5월 17일에 제정되었습니다. 2017년 제1회 길원옥여성평화상은 구수정 한베평화재단 상임이사가, 2018년에는 조진경 십대여성인권센터 대표가, 2019년에는 5.18광주민주화운동 당시 인권유린을 고발한 차명숙 518구속부상자회 대구경북지부 공동대표가 수상하였습니다.             
+        - title: 김복동평화상
+        - body: 아직도 세계 곳곳에서 이어지는 무력분쟁 하 성폭력 피해자를 지원하는 국외 활동가 및 여성인권단체를 발굴 및 지원하여 전시성폭력 문제에 대한 인식을 높이고 문제해결을 위한 국제적 연대를 다지고자 제정된 상으로, 김복동 할머니가 ‘100만 시민이 함께하는 여성인권상’의 수상자로 받으신 상금 5천만 원을 기부하신 것을 씨앗기금으로 하여 2017년 11월 25일 세계여성폭력철폐의 날에 제정되었습니다. 2018년 제1회 김복동평화상 수상자는 우간다 신의 저항군(Lord’s Resistance Army)내전 피해자들을 지원하는 골든위민비전(Golden Women Vision in Uganda)의 아찬 실비아 오발(Acan Sylvia Obal) 대표가, 지난해에는 전시성폭력 피해자를 위한 코소바고문피해자재활센터(Kosova Rehabilitation Centre for Torture Victims, KRCT)의 활동가인 코소보 생존자 바스피예 크라스니치-굿맨(Vasfije Krasniqi-Goodman)이 선정된 바 있습니다.
     국내평화비:
       title: 평화비(국내)
       slug: domestic-peace-statue
+      평화비의의미:
+        title: 평화비의 의미
+        body:
+          - 평화비는 일본군성노예제 문제의 역사적 사실을 기억하여 이와 같은 비극이 재발되지 않고, 세계 곳곳에서 여전히 발생하고 있는 전시 성폭력이 중단되기를 바라는 마음을 담아 만든 조형물로, 평화의 소녀상이라고 불리기도 합니다.
+          - 평화비는 인권과 평화를 염원하는 많은 이들이 자발적으로 참여하여 국내는 물론, 세계 각지에 평화비를 세우고 있으며, 많은 사람들이 함께 평화를 염원하는 열린 교육의 장으로서 우리 곁에 함께 하고 있습니다.
+          - 평화비는 지역 또는 건립 성격에 따라 조금씩 다른 모습을 하고 있기도 하지만, 모두 일본군성노예제 문제를 잊지 않고, 함께 기억하고 인권과 평화실현을 염원한다는 뜻을 담고 있습니다.
+          - 일본대사관 앞 건립된 평화비의 전체적인 형상은 작은 의자에 걸쳐 앉은 소녀가 일본대사관을 조용히 응시하는 모습으로, 일제 강점기당시 강제로 납치되었던 당시 어린 소녀의 모습을 묘사하고 있습니다.
+          - 소녀의 왼쪽 어깨에 앉은 새 한 마리는 저승과 이승의 영매로, 일본의 사죄와 반성을 기다리다 먼저 가신 할머니들과 함께하는 뜻을 담고 있으며, 거칠게 뜯겨진 듯한 모습의 소녀의 머리카락은 가족과 고향의 품을 떠나 단절되어야 했던 아픔을 의미합니다.
+          - 움켜쥔 두 손은 일본정부의 책임 회피에 맞서는 분노이자 우리가 함께하겠다는 약속과 다짐이며, 뒷꿈치가 땅에서 들린 발은 강제로 끌려가 ‘위안부’가 되어 겪어야 했던 고난과 함께, 마치 죄인처럼 살아야 했던 고통의 시간과 사회의 편견, 그리고 정부의 무책임한 태도가 계속되는 억울한 현실을, 이 땅을 밟고 서지 못하고 있는 맨발로 표현했습니다.
+          - 빈 의자는 과거와 현재 그리고 미래의 연대를 상징합니다. 먼저, 떠나가신 할머님들의 자리로 이들을 기억하고 추모하는 마음의 뜻을 담고 있습니다. 두 번째는 평화비가 세워진 주한 일본 대사관 앞 평화로를 찾는 사람들이 소녀 옆의 빈 의자에 함께 앉아 일본대사관을 응시하면서 소녀로 투영되는 피해자들의 삶을 기억하고, 일본군성노예제 문제의 해결을 위해 28년째 이어오고 있는 피해자들의 외침에 함께 하는 연대의 장으로, 그리고 언제 어디서든 수요시위를 계속 이어가는 공간이자, 잠시 쉬어가며 소녀들의 피해자들이 바라는 전쟁없는 평화로운 세상을 꿈꾸고 생각하는 공간을 의미합니다.
+          - 바닥의 그림자는 소녀가 할머니가 되기까지 지나온, 오랜 세월을 의미하고 그리고 정의실현을 기다려 온 피해 할머니들의 모습이자 쉽게 잊히지 않는 역사를 의미합니다.뿐만 아니라 그림자의 가슴에는 슬픔과 괴로움을 안고 돌아가신 할머니들의 영혼이자 진정한 해방을 꿈꾸는 나비 한 마리가 자리하고 있습니다.
+        src: http://womenandwar.net/kr/wp-content/uploads/2018/08/%E1%84%89%E1%85%A9%E1%84%82%E1%85%A7%E1%84%89%E1%85%A1%E1%86%BC_%E1%84%8B%E1%85%B4%E1%84%86%E1%85%B5-e1540194364252.png
+        평화비구매:
+          title: 평화비 구매
+          body: 평화비(작은 소녀상)는 전쟁과여성인권박물관 사이트 뮤지엄샵에서 온라인으로 구입이 가능합니다.
+          url: https://womenandwarmuseum.net/guide/stores/26_%EC%9E%91%EC%9D%80%EC%86%8C%EB%85%80%EC%83%81-1r/
+      국내건립현황:
+        title: 국내 건립현황
+        body: 엑셀 파일 활용시 ‘정의기억연대 자료 제공’을 명시하여 주십시오.(2022.11.8. 현재 / 국내 평화비 총 146개)
+        src: https://womenandwar.net/kr/wp-content/uploads/2022/11/%EC%A0%95%EC%9D%98%EC%97%B0-%ED%99%88%ED%8E%98%EC%9D%B4%EC%A7%80-%EA%B2%8C%EC%8B%9C%EC%9A%A9_%EA%B5%AD%EB%82%B4%ED%8F%89%ED%99%94%EB%B9%84%ED%98%84%ED%99%A9_20221108%ED%98%84%EC%9E%AC_%EC%A0%95%EC%9D%98%EA%B8%B0%EC%96%B5%EC%97%B0%EB%8C%80-%EC%A0%9C%EA%B3%B5-%EB%AA%85%EC%8B%9C-%EC%9A%94%EC%B2%AD.xlsx
+      작은소녀상건립운동현황:
+        title: 작은소녀상건립운동현황
+        body: 작은소녀상 건립운동은 이화여고 역사동아리 ‘주먹도끼’의 제안으로 일본군성노예 피해할머니들의 삶을 기억하고, 지난 28년간 이어온 일본군성노예 피해 할머니들의 인권과 명예회복을 위한 운동을 미래 세대인 청소년들이 함께 하겠다는 의미로 시작된 활동으로 2018년 7월 대한민국 정부에 등록된 신고피해자 239명을 상징하는 239개 학교에 건립을 완료하였습니다.    
     해외평화비:
       title: 평화비(해외)
       slug: international-peace-statue
-  lawsuit:
-    title: "법적대응"
-    slug: lawsuit
-    설명:
-      title: 설명
-      slug: descptions
-    국내법적대응:
-      title: 국내 법적대응
-      slug: domestic-lawsuit
-    국외법적대응:
-      title: 국외 법적대응
-      slug: international-lawsuit
+      해외건립현황:
+        title: 해외건립현황
+        body: 해외 건립현황 엑셀을 다운로드 받을 수 있습니다.
+        src: https://womenandwar.net/kr/wp-content/uploads/2021/04/%ED%95%B4%EC%99%B8_%EC%9D%BC%EB%B3%B8%EA%B5%B0%EC%9C%84%EC%95%88%EB%B6%80_%EA%B8%B0%EB%A6%BC%EB%B9%84_%ED%8F%89%ED%99%94%EB%B9%84_%EA%B1%B4%EB%A6%BD%ED%98%84%ED%99%A9_Memorials_and_Statues_of_Peace_Abroad.xlsx
   butterfly_fund:
     title: "나비기금"
     slug: butterfly_fund
     기금설명:
       title: 기금설명
       slug: descptions
+      목록:
+        - title: 기금설명
+        - body: 분쟁과 무력 갈등 속에서 인권을 유린당하고, 성폭력으로 고통받고 있는 피해 여성과 아동을 지원함으로써 전시 성폭력 재발 방지와 근절을 위한 다양한 연대 활동을 적극적으로 펼치고 있습니다.
+        - title: 6월19일 세계전시성폭력추방의 날 주간행사
+        - body: 2019년 교사워크샵, 국제심포지엄을 시작으로 2020년에도 세계코리언대회 및 2차세계교사워크숍을 예정하고 있습니다.(코로나19로인해 연기)
+        - title: 나비기금
+        - body: 2012년 3월 8일 세계 여성의 날, 김복동, 길원옥 할머니께서 일본정부로부터 법적배상을 받으면 자신들과 같이 고통받고 있는 전시 성폭력피해 여성들을 위한 지원활동을 기부하고 싶다는 의지를 밝히셨고, 할머니들의 이러한 뜻에 따라 정의기억연대는 나비기금을 제정하여 콩고, 우간다, 베트남 등의 전시성폭력 피해 여성과 아동들을 지원하며 연대하고 있습니다.
+    길원옥:
+      body:
+        - 나는 열세 살에 끌려갔습니다.
+        - 내가 아파봤기 때문에 나와 같은 아픔을 당한 여성들이 얼마나 아픈지 알고 있습니다.
+        - 우리와 같은 아픔을 겪는 여성들에게 힘이 되었으면 좋겠습니다.
+      author: 길원옥
+      src : https://womenandwar.net/kr/wp-content/uploads/2020/02/13.34x20.jpg
+    전시성폭력재발방지:
+      title: 전시성폭력 재발방지
+      slug: activities
+      url: "/categories/전시성폭력재발방지/"      
   research_education_scholarship:
     title: "교육·연구·장학"
     slug: research_education_scholarship
