정의기억연대 연혁 about/history

--- a/data/activity.yml
+++ b/data/activity.yml
@@ -14,6 +14,252 @@ ko:
       body:
       - "* 종군위안부 : ‘종군’에는 자발적이었다는 의미가 포함되어 있습니다."
       - "* 정신대 : 일본의 전시체제 돌입과 함께 조선의 노동력을 강제 동원한 제도를 말하며, 여성의 경우 여자(근로)정신대라는 이름으로 광범위하게 사용되었습니다."
+  org_history:
+    title: 정의기억연대연혁
+    slug: history
+    정의연연혁:
+      title: 정의기억연대연혁
+      목록:
+        - title: 1990
+        - date: 1990.11.16.
+          body:
+          - 37개 여성단체가 모여 ‘한국정신대문제대책협의회 결성
+        - date: 1991.08.14.
+          body:
+          - 김학순 할머니, 일본군‘위안부’ 피해자임을 공개적으로 밝히는 기자회견 개최
+        - date: 1991.09.18.
+          body:
+          - 정대협 ‘정신대 신고전화’ 개통
+        - title: 1992
+        - date: 1992.01.08.
+          body:
+          - 제1차 일본군‘위안부’문제해결을 위한 정기 수요시위
+        - date: "1992.8.10.-11."
+          body:
+          - 제1차 ‘정신대문제 아시아연대회의’ 개최         
+        - date: "1992.08.08.-26."
+          body:
+          - 정대협 국제협력위원회 처음으로 유엔인권소위원회에 참가하여 일본군‘위안부’ 문제 유엔에 제기
+        - title: 1993       
+        - date: 1993.10.23.
+          body:
+          - 제2차 ‘강제종군위안부 문제해결을 위한 아시아연대회의’ 개최          
+        - date: 1993.10.23.          
+          body:
+          - 제100차 일본군'위안부'문제해결을 위한 정기수요시위 개최
+        - title: 1995  
+        - date: "1995.02.27.-03.01."
+          body:
+          - 제3차 아시아연대회의 ‘전후 50년 위안부 문제는 왜 해결되지 않았는가.’ 개최.
+        - date: 1995.04.22.
+          body:
+          - 기록영화제작소 보임이 제작한 영화 <낮은 목소리> 시사회 진행 및 극장상영 시작     
+        - date: "1995.09.04.-15."
+          body:
+          - 베이징 세계여성대회 참석. 최종문서 행동강령에 진상 규명과 범죄자 소추 및 피해자에게 보상이 명기된 147e와 f가 채택
+        - title: 1996
+        - date: 1996.01.24.
+          body:
+          -  제200차 일본군‘위안부’ 문제해결을 위한 정기수요시위 진행.     
+        - date: 1996.03.27.-30.
+          body:
+          - "제4차 일본군‘위안부’문제해결을 위한 아시아연대회의 필리핀 마닐라에서 개최 “국민기금이 왜 해결책이 아닌가?”"
+        - date: 1996.01.24.
+          body:
+          - 일본군‘위안부’ 국내 최초 증언자 김학순 할머니 별세
+        - title: 1998
+        - date: 1998.02.18.
+          body:
+          - 제300차 일본군‘위안부’ 문제 해결을 위한 정기수요시위 개최
+        - date: "1998.04.15.-17."
+          body:
+          - 제5차 아시아연대회의 서울 개최
+        - title: 2000
+        - date: 2000.03.01.
+          body:
+          - 제400차 일본군‘위안부’문제해결을 위한 수요시위 개최
+        - date: "2000.12.07.-12."
+          body:
+          - 일본군성노예전범 여성국제법정 개최, 일왕 히로히토 유죄판결
+        - title: 2002
+        - date: 2002.03.13.
+          body:
+          - 제500차 일본군‘위안부’문제해결을 위한 정기 수요시위 개최
+        - title: 2003
+        - date: "2003.04.23.-24."
+          body:
+          - 서울에서 제6차 아시아연대회의 ‘국제기구 권고와 2000년 법정 판결 실현을 위하여!’ 개최
+        - date: 2003.12.10.
+          body:
+          - 한국정신대문제대책협의회 쉼터 <평화의 우리집> 개소
+        - title: 2004
+        - date: 2004.03.17.
+          body:
+          - 제600차 일본군'위안부'문제해결을 위한 정기수요시위 개최
+        - date: 2004.05.20.
+          body:
+          - 일본의 과거청산을 요구하는 국제연대협의회 서울대회 개최   
+        - title: 2005
+        - date: 2005.01.05.
+          body:
+          - 해방 60주년 글로벌캠페인 <일본군‘위안부’에게 정의를> 발대식
+        - date: 2005.02.12.-14.
+          body:
+          - "일본 도쿄에서 제7차 아시아연대회의 ‘전후 60주년의 위안부 문제해결운동: 가해국 일본의 책임을 묻다’ 개최"
+        - title: 2006
+        - date: 2006.03.15.
+          body:
+          - 제700차 정기수요시위 ‘여성폭력 중단, 일본군위안부 피해자에게 정의를!’ 세계동시연대집회(8개국, 14개 도시) 개최
+        - title: 2007
+        - date: 2007.05.19.-21.
+          body:
+          - 서울에서 제8차 일본군‘위안부’문제해결을 위한 아시아연대회의 개최
+        - title: 2008
+        - date: 2008.02.13.
+          body:
+          - 제800차 일본군‘위안부’ 문제 해결을 위한 정기수요시위 개최
+        - date: 2008.03.08.
+          body:
+          - "한국정신대문제대책협의회 수요시위가 3.8 세계여성의 날 100주년 “올해의 여성운동상” 수상"
+        - date: 2008.11.23.-25.
+          body:
+          - 제9차 일본군‘위안부’ 문제 해결을 위한 아시아연대회의, 도쿄 개최
+        - title: 2010
+        - date: 2010.01.13.
+          body:
+          - 제900차 일본군‘위안부’문제해결을 위한 수요시위 개최
+        - date: 2010.11.18
+          body:
+          - 정대협 창립20주년 기념 국제심포지엄 “2010년, 일본군‘위안부’ 문제를 말한다” 개최
+        - title: 2011
+        - date: 2011.08.12.-15.
+          body:
+          - 제10차 일본군‘위안부’ 문제 해결을 위한 아시아연대회의, 서울 개최
+        - date: 2011.12.14.
+          body:
+          - 제1000차 일본군‘위안부’ 문제해결을 위한 정기 수요시위 개최, 일본대사관 앞에서 평화비 제막식 진행
+        - title: 2012
+        - date: 2012.03.08.
+          body:
+          - 전시하 성폭력 피해 여성을 지원하기 위한 <나비기금> 발족
+        - date: 2012.05.05.
+          body:
+          - <전쟁과여성인권박물관> 개관
+        - date: 2012.12.10.-11.
+          body:
+          - 제11차 일본군‘위안부’문제해결을 위한 아시아연대회의 대만 개최
+          - 8월 14일을 세계일본군‘위안부’메모리얼데이(기림일)로 채택
+        - title: 2013
+        - date: 2013.03.08.
+          body:
+          - 베트남한국군성폭력 피해자들에게 사죄의 메시지 발표, 한국정부에게 사죄와 배상 요구 성명발표. 피해자에게 매월 생활비 전달 및 한국군 2,3세에게 자활지원 시작.
+        - date: 2013.08.14.
+          body:
+          - 제1회 세계 일본군‘위안부’ 기림일 기념 세계연대행동 및 제1087차 일본군‘위안부’ 문제해결을 위한 정기수요시위 개최
+        - date: 2013.11.13.
+          body:
+          - 제1100차 일본군‘위안부’문제해결을 위한 정기수요시위 개최
+        - title: 2014          
+        - date: 2014.05.30.-06.03.
+          body:
+          - 제12차 일본군‘위안부’문제해결을 위한 아시아연대회의, 도쿄 개최
+        - date: 2014.08.14.
+          body:
+          - 제2차 세계일본군‘위안부’ 기림일 맞이 촛불문화제 진행
+        - title: 2015
+        - date: 2015.05.24.
+          body:
+          - 제13차 일본군‘위안부’ 문제해결을 위한 아시아연대회의 서울에서 개최. 일본정부에 대한 제언’과 결의문 채택. 한일정부에 전달
+        - date: 2015.08.14.
+          body:
+          - 제3차 세계일본군‘위안부’ 기림일 맞이 공동행동 진행
+        - date: 2015.10.14.
+          body:
+          - 제1200차 일본군성노예제문제해결을 위한 정기 수요시위 개최
+        - title: 2016
+        - date: 2016.05.18.-20
+          body:
+          - 제14차 일본군‘위안부’문제해결을 위한 아시아연대회의, 서울 개최
+        - date: 2016.06.09
+          body:
+          - 2015한일합의 무효화와 일본군성노예제 문제의 정의로운 해결을 위해 <일본군성노예제 문제해결을 위한 정의기억재단> 설립
+        - date: 2016.08.10.
+          body:
+          - 제4차 일본군‘위안부’ 기림일 맞이 나비문화제 진행
+        - title: 2017
+        - date: 2017.08.09.
+          body:
+          - 제5차 세계일본군‘위안부’기림일 맞이 공동행동
+        - date: 2017.09.13.
+          body:
+          - 제1300차 일본군성노예제문제해결을 위한 정기수요시위 개최
+        - date: 2017.11.25.
+          body:
+          - 일본군성노예제문제해결을 위한 정의기억재단, 239명 한국의 피해자 모두에게 100만 시민의 이름으로 여성인권상 수여
+        - title: 2018
+        - date: 2018.03.08.-09.
+          body:
+          - 제15차 일본군‘위안부’문제해결을 위한 아시아연대회의 ‘실현되지 않은 정의, 일본군성노예제 문제의 해결을 위하여’ 서울 개최 
+        - date: 2018.07.11.
+          body:
+          - 한국정신대문제대책협의회와 일본군성노예제문제해결을 위한 정의기억재단 통합하여 <일본군성노예제 문제 해결을 위한 정의기억연대> 공식 출범
+        - date: 2018.08.14.
+          body:
+          - 제6차 일본군‘위안부’ 기림일 맞이 국제심포지엄, 제1회 김복동평화상 시상식, 나비문화제 진행
+        - date: 2018.11.16.
+          body:
+          - 정대협 창립 28주년 기념 ‘북측 생존자들의 기억과 증언, 그리고 문제해결을 위한 남북연대’ 심포지엄 진행
+        - title: 2019
+        - date: 2019.03.13.
+          body:
+          - 제22회 지학순정의평화상 수상
+        - date: 2019.08.08.
+          body:
+          - 영화 김복동 개봉
+        - date: 2019.08.14.
+          body:
+          - 제7차 세계일본군‘위안부’기림일 기념 세계연대행동 및 1400차 일본군성노예제문제해결을 위한 정기수요시위 개최
+        - title: 2020
+        - date: 2020.08.12.
+          body:
+          - 제8차 세계일본군‘위안부’ 기림일 세계연대집회
+        - date: 2020.08.14.
+          body:
+          - 제8차 세계일본군‘위안부’ 기림일 나비문화제  
+        - date: 2020.09.19.
+          body:
+          - 국제심포지엄 <끌려간 사람들, 돌아오지 못한 사람들, 아직도 끝나지 않은 전쟁> 개최
+        - date: 2020.10.08.
+          body:
+          - 한국정신대문제대책협의회 창설 30주년 기념 특별전시 <길 위에서의 30년, 결국은 희망이더라> 
+        - date: 2020.11.14.
+          body:
+          - 정대협/정의연 30주년 기념 심포지엄
+        - title: 2021
+        - date: 2021.05.18.
+          body:
+          - 사단법인 아디와 아시아 분쟁지역 젠더폭력(GBV) 피해생존자 보호·지원, 팔레스타인 여성 트라우마 힐링센터 3년간 지원 시작
+        - date: 2021.07.14.
+          body:
+          - "일본군성노예제 문제해결을 위한 1500차 정기 수요시위(주관 : 1500 공동주관인)"
+          - 수요시위 아카이브, 1500차 수요시위 기념 리뉴얼 오픈    
+        - date: 2021.08.11.
+          body:
+          - 제9차 세계일본군’위안부’기림일 세계연대집회
+        - date: 2021.08.14.
+          body:
+          - 제9차 세계일본군‘위안부’기림일 나비문화제
+        - title: 2022
+        - date: 2022.01.05.
+          body:
+          - 일본군‘위안부’문제해결을 위한 피해자지원단체 네트워크 기자회견
+          - 수요시위 30주년 기념 1525차 수요시위
+        - date: 2022.08.10.
+          body:
+          - 제10차 세계일본군‘위안부’기림일 세계연대집회 수요시위, 사전행진
+        - date: 2022.08.14.
+          body:
+          - 제10차 세계일본군‘위안부’기림일 나비문화제                                                                                                                                                                                                                   
   wednesday_demonstration:
     title: "수요시위"
     slug: wednesday_demonstration
