교육연구장학 탭을 구성합니다.

--- a/data/activity.yml
+++ b/data/activity.yml
@@ -547,6 +547,9 @@ ko:
         title: 해외건립현황
         body: 해외 건립현황 엑셀을 다운로드 받을 수 있습니다.
         src: https://womenandwar.net/kr/wp-content/uploads/2021/04/%ED%95%B4%EC%99%B8_%EC%9D%BC%EB%B3%B8%EA%B5%B0%EC%9C%84%EC%95%88%EB%B6%80_%EA%B8%B0%EB%A6%BC%EB%B9%84_%ED%8F%89%ED%99%94%EB%B9%84_%EA%B1%B4%EB%A6%BD%ED%98%84%ED%99%A9_Memorials_and_Statues_of_Peace_Abroad.xlsx
+    기림사업:
+      title: 기림사업 소식
+      url: "/categories/기림사업/"
   butterfly_fund:
     title: "나비기금"
     slug: butterfly_fund
@@ -575,5 +578,29 @@ ko:
     title: "교육·연구·장학"
     slug: research_education_scholarship
     사업설명:
-      title: 사업설명
+      title: 교육·연구·장학
       slug: research_education_scholarship
+      목록:
+        - title: 연구교육
+        - body: 연구와 조사를 통해 이미 발굴. 수집되었거나 발굴되지 않은 문서들을 발굴. 수집. 목록화하고 이를 통해 일본군성노예제 문제의 피해 실태 조사 및 역사적 진실 규명을 함으로써 범죄의 진상과 일본 정부의 책임을 더욱 명확히 밝히고 책임 이행을 촉구하기 위해 진행하고 있습니다.
+        - title: 연구교육목적
+        - body: 그리고 교육을 통해 일본군성노예제와 관련한 교육 및 교재 개발,보급하고 인권과 평화교육의 관점에서 일본군성노예제 문제를 바라보도록 함으로써, 미래세대 및 시민들이 일본군성노예제 문제에 대한 올바른 인식을 함양하는 것을 목표로 진행하고 있습니다.
+        - title: 일본군성노예제문제와 인권 및 평화의식 함양 토론형 교육
+        - body: 2019년도부터 서울, 경기, 인천 지역 소재 중,고등학교에 재학중인 청소년들을 대상으로 토론형교육을 실시하고 있습니다.         
+        - title: 장학사업
+        - body: 평화로운 세상을 맞이하기 위해 힘써온 일본군성노예제 피해자들의 바람이 실현될 수 있도록 평화와 인권교육에 힘쓰고, 평화로운 세상의 주인공이 되어 세상을 이끌 미래세대를 위한 장학사업을 통해 미래세대에 대한 연대와 지원을 하고 있습니다.
+        - title: 마리몬드 피스가드너 장학기금
+        - body: 일본군성노예제 피해자들을 동반자로 하여금 지금까지 많은 디자인 작품을 선보인 마리몬드와 할머니의 뜻을 이어받아, 평화를 만들고 가꾸는 피스가드너 중에서 적극적인 활동을 펼친 청소년에게 수여하고 있는 장학금으로, 시즌제로 운영하고 있으며, 이 장학기금의 시즌1은 <이순덕 장학금>으로 지난 2017년 4월 4일, 향년 100세의 나이로 돌아가신 이순덕 할머니의 이름으로 수여하고 있습니다.
+        - title: 김학순 장학금
+        - body: 1991년 8월 14일 최초의 공개증언을 통해 일본군성노예제 문제의 진실을 세상에 전하셨던 김학순 할머니의 이름으로 수여하는 장학금으로, 일본군성노예제 문제 피해자들과 가족의 아픔을 우리 사회가 함께 보듬고, 할머니들이 겪은 역사의 참상과 할머니들이 만들어 온 평화를 그들의 손자, 손녀가 느끼고, 이를 실천하자는 취지로 만들어졌습니다.
+        - title: 강덕경 장학금
+        - body: 일본군성노예제 피해와 일본정부의 범죄를 그림으로 표현하여 많은 사람들에게 깊은 울림과 감명을 주셨던 강덕경 할머니의 이름으로 수여하는 장학금으로, 한 사람이 남을 때까지 사죄를 받겠다던 할머니의 뜻을 이어받고, 할머니의 삶을 통해 배우고 성장해가며 예술 활동에 재능이 있는 미래 세대들과 함께 하기 위해 만들어졌습니다.
+    연구조사교육:
+      title: 교육·연구 소식
+      slug: activities
+      url: "/categories/연구조사교육/"
+    장학사업:
+      title: 장학사업 소식
+      slug: activities
+      url: "/categories/장학사업/"      
+
