--- a/data/activity.yml
+++ b/data/activity.yml
@@ -500,7 +500,7 @@ ko:
       slug: activities
       url: "/categories/일본국상대소송/"
   memorial:
-    title: "기억.기림"
+    title: "기억·기림"
     slug: memorial
     기림일:
       title: 8.14 기림일
