피해자들의 외침 목업구성

--- a/data/comfort_women.yml
+++ b/data/comfort_women.yml
@@ -49,4 +49,126 @@ ko:
       - 이후 1945년 일본의 패전과 함께 일본군 성노예로 끌려간 여성들은 현지에서 버려지거나 폭격으로 사망, 혹은 일본군에 의해 살해당하기도 했습니다. 생존자들은 고향으로 돌아오기 위해 다시 고난에 직면해야 했고, 일부는 고향으로 돌아올 수 없어 귀국을 포기하는 사례도 발생했습니다. 뿐만 아니라 일본군성노예제 피해자들은 ‘위안소’에서 당한 구타나 고문 그리고 성폭력 등으로 인해 평생 치유하기 힘든 신체적 고통 속에 살며, 심지어 아이를 낳을 수 없는 경우도 많았고, 이로 인해 가정을 이루는 것도 어려웠습니다. 무엇보다 여러 심리적 후유증을 평생 안고 주위의 시선과 편견에 맞닥뜨려 긴 세월을 침묵 속에 살아야만 했습니다.
       - 일본군성노예제 문제가 세상에 드러나게 된 계기는 1988년 ‘여성과 관광문화 세미나’에서 윤정옥 교수에 의해 알려졌고, 이후 여성단체들의 연대를 통해 ‘한국정신대문제대책협의회’가 1990년 11월 16일 결성되어 일본 정부를 향해 문제제기를 시작하게 되었습니다. 그러나 일본정부는 관여 사실을 부인했고, 이에 1991년 8월 14일, 김학순 할머니의 국내 최초 기자회견을 통해 일본군성노예제 피해자임을 공개적으로 증언하면서 세상과 단절된 채 침묵해야했던 피해자들이 세상으로 나오게 된 계기가 되었습니다.
       - 김학순 할머니의 용기있는 행동은 국내를 비롯한 국제 사회에 일본군성노예제 문제 해결을 향한 중요한 전환점이 되었습니다. 이웃, 가족과도 단절된 채 일본군성노예 피해 사실조차 제대로 이야기 할 수 없었던 생존자들은 많은 여성, 시민들과 손잡고 동행하면서 적극적으로 일본정부의 범죄행위를 고발하기 시작했고, 세상을 향해 명예와 인권회복을 외치고, 자신과 같은 피해를 겪는 사람이 없도록 평화로운 세상을 만들어야 한다며 여성 인권·평화 운동가로 거듭나 활동하고 있습니다.
+  testimonies:
+    title: 증언
+    길원옥:
+      name: 길원옥 할머니
+      lifespan: 1928~현재
+      message: "“죽을 때까지 상처는 아물지 않습니다.”"
+      src: https://womenandwar.net/kr/wp-content/uploads/2018/08/%E1%84%80%E1%85%B5%E1%86%AF%E1%84%8B%E1%85%AF%E1%86%AB%E1%84%8B%E1%85%A9%E1%86%A8_%E1%84%92%E1%85%A1%E1%86%AF%E1%84%86%E1%85%A5%E1%84%82%E1%85%B5_c.jpg
+      body:
+      - 길원옥 할머니는 1928년 10월 평안북도 희천에서 태어난 뒤 평양으로 이사하였습니다. 13세(1940년)였던 겨울, 아버지가 도둑의 물건을 샀다는 이유로 감옥에 가게 되었고, 그 벌금을 벌기 위해 중국 만주 하얼빈으로 갔으나 그곳은 일터가 아닌, 위안소였습니다.
+      - 그곳에서 일 년간 있다가 병을 얻어 귀국했고, 가난한 집안 살림을 돕다가 돈을 벌기 위해 15세 때(1942년) 중국 석가장으로 건너갔지만, 또다시 ‘위안부’ 생활이 기다리고 있었습니다.
+      - 18세 때(1945년) 해방이 되어 인천으로 귀국한 뒤 함께 온 여자들과 돈을 벌어 집에 가고자 했으나 삼팔선에 막혀 고향으로 돌아가지 못하게 되었습니다. 이후 만물상, 노점상 등을 하며 생계유지를 하였습니다.
+      - 할머니가 31세가 되던 때에 양아들을 들여 키웠고 시장에서 장사하며 돈을 모았으나 빚보증을 잘못하여 생활이 어려워졌습니다. 아들은 목사가 되었고, 1998년 정부에 일본군‘위안부’로 등록하였습니다. 인천에서 혼자 사시던 할머니는 2004년부터 정대협 쉼터인 ‘평화의 우리집’에서 거주하고 있습니다.
+      - 할머니는 피해자 등록 후, 국내외 많은 곳을 다니며 증언 활동으로 일본군‘위안부’ 피해를 알리고 있으며 매주 수요시위에 참여하는 등 일본군‘위안부’ 문제해결을 위해 활발하게 활동을 하고 있습니다. 그리고 2012년 3월 8일, 세계여성의 날에 김복동 할머니, 한국정신대문제대책협의회와 함께 일본 정부로부터 배상을 받으면 그 돈을 세계 전쟁피해 여성을 돕는 데 쓰겠다며 ‘나비기금’을 제정하셨고 뒤이어 2017년 5월 17일, 평화와 통일을 위해 노력하고 있는 여성 평화·통일 활동가들을 지원하기 위해 길원옥여성평화상을 제정하여 후배 여성 활동가들을 양성 및 지원하고 계십니다.
+      testimony:
+      - “하여튼 뭐, 자유가 없으니까. 낮에두 그 사람들이 들어 닥치면은 어-쩔 수 없이 그야말로 그 사람들- 그냥 받아야 했지. 이제 시방으로 치면 홀 마냥 이렇게 해 가지구 갓(가장자리)으로 삥- 둘러 이렇게 의자가 있는데 거기에 앉아 있은 생각이 나고…”
+      - “바람 부는 대로 물결치는 대로 넘어갔어요, 세월이. 너무나 험하게 살았어요. 그 괴로운 생각, 가슴 아픈 생각을 일일이 가슴에 품고 살았으면 오늘날까지 살지도 못했어요. 그걸 다 기억하고 살았으면 아마 살질 못했을 거에요.”
+      - “2000년에 TV를 보고 있었어요. 우연히 위안부 피해자가 울면서 증언하고 일본을 욕하는 장면을 보았죠. 나도 모르게 ‘정작 다니면서 떠들 사람은 가만히 있는데 왜 저렇게 난장판을 벌이느냐’라고 혼잣말을 했어요. 그때까지만 해도 저는 피해를 얘기하는 것에 대해서 ‘사람이 낯부끄러운 줄 모르고 제 얼굴에 침 뱉느냐’라고 생각했어요. 그런데 옆에 앉았던 며느리가 그 소리를 들었나봐요. 며느리는 우리네들과 달리 깨어 있잖아요. ‘아무리 봐도 우리 엄마 수상하다’고 하더니 그 뒤로부터 정대협으로 통일부로 적십자로 다니면서 절차를 알아가지고 오고 알려주고 그랬어요. 그래서 피해자라는 게 알려졌죠. 할 수 없이 하루 수요시위를 하는 데 나가보니까 ‘아 이건 아니로구나, 내가 부끄러운 게 아니라 일본 정부가 부끄러워해야 하는구나’라는 생각이 들었어요.”
+      - “‘우리들을 위해서 젊은이들이 저렇게 싸우는데 당사자가 숨어서 살 필요가 뭐 있나. 내가 같이 나가 싸워야지.’ 그래서 나온 게 2002년인가 그래요. 한 가지라도 숨기지 않고 처음에 당한 그대로 말하기 시작했죠. 외국에도 다닌 것이 싸움 없는 나라가 돼야 우리같이 피해를 보는 사람이 다시는 안 생기겠다 싶어서 그렇게 돌아다니는 거예요. 한국에서도 학교에서 오라면 학교에 가고, 다른 데서 오라면 또 다녀요. 부끄러운 얼굴인데도 부끄럽다는 내색 없이 다닙니다. 지금은 내가 부끄러운 게 아니란 걸 아니까요. 그리고 내가 하는 말을 일본 정부가 듣고 있다는 것을 알게 되니까 있는 그대로 다 말합니다. 그러니까 마음이 조금 편안해졌죠. 이걸 가둬놓고, 숨기고, 세상 사람이 알아볼까 감출 때에는 참 힘들었죠. 같이 사는 아들도 내가 그렇다는 것을 전혀 몰랐었으니까요.”
+      - “얼마나 아팠으면 추우나 더우나 어디든지 쫓아다니겠어요. 싸움 없는 나라, 전쟁 없는 나라를 만들고 싶어서 아파도 다닙니다. 죽을 때까지 상처는 아물지 않습니다. 진실이나 밝혀주길  일본정부가 양심이 있다면 이제라도 그 한을 풀어줘야 하지 않을까요.”
+    강경덕:
+      name: 강경덕 할머니
+      lifespan: 1929~1997
+      message: "“우리 할머니들 그리 쉽게 안 죽고, 오래 살 거예요.”"
+      src: https://womenandwar.net/kr/wp-content/uploads/2018/08/%E1%84%80%E1%85%A1%E1%86%BC%E1%84%83%E1%85%A5%E1%86%A8%E1%84%80%E1%85%A7%E1%86%BC_%E1%84%92%E1%85%A1%E1%86%AF%E1%84%86%E1%85%A5%E1%84%82%E1%85%B5_c-300x300.jpg
+      body:
+      - 강덕경 할머니는 1929년 경남 진주에서 태어나셨습니다. 고등과 1학년이던 16살 때(1944년)일 때 일본인 담임교사에 의해 근로정신대 1기생으로 연행되었습니다. 그러던 중에 그만 일본 헌병에게 붙잡혀 그때부터 ‘위안부’ 생활을 강요당하게 되었습니다.
+      - 해방 이후 1년이 지난 1946년이 되어서야 고향으로 돌아갈 수 있었지만, 남원과 부산 등으로 이동했습니다. 식모살이, 식당일, 하우스 농사 등 안 해 본 일이 없을 정도로 열심히 일했지만 번 돈은 ‘위안부’ 후유증으로 인해 병원 치료비로 다 써버렸습니다.
+      - 할머니는 1992년(64세) 자신이 ‘위안부’였음을 세상에 알리고 일본 정부로부터 사죄와 배상을 받기 위한 운동을 시작하셨습니다. 신고 후 위안소에서의 경험과 아픔을 그림으로 그려내 [빼앗긴 순정], [사죄하라], [책임자 처벌] 등 많은 작품을 남겼습니다. 1995년(67세)에는 변영주 감독의 다큐멘터리 ‘낮은 목소리 2’에 출연하였으며, 자신이 폐암 말기라는 사실을 알고 죽기 전 하고 싶은 말이 있다며 자신을 끝까지 영화로 담아주기를 원했습니다. 또한, 죽음을 눈앞에 둔 병상에서조차 범죄 인정과 법적 책임을 회피한 채 위로금으로 무마하려 했던 일본의 ‘아시아국민기금’을 거부하셨습니다.
+      - 아직 완성해야 할 그림들이 많은데, 그 그림들을 스케치 상태로 남겨둔 채 할머니는 1997년(69세) 2월 폐암으로 생을 마감하셨습니다.
+      testimony:
+      - “당사자들이 나서지 않는다면 누가 관심을 갖겠습니까. 몸이 아파 쉬고 싶을 때도 있지만 이렇게 나와 목청껏 구호를 외치며 기운을 내보려 애씁니다.”
+      - “젊을 때는 결혼하자고 따라다니는 남자들도 많이 있었죠. 그래도 정말 결혼은 못하겠습디다. 제 이야기를 다 들어주고 오냐 좋다고 살 남자가 있겠어요? 요샌 그 때 다 덮어두고 결혼을 해버렸으면 좋았을 걸 하는 생각을 해보기도 합니다. 특히 명절 같은 땐 이렇게 피붙이 하나 없이 그냥 가야 하는구나 하는 생각을 하면 아찔해지기도 합니다.”
+      - “8.15 광복으로 위안부 생활이 다 끝났다고 생각했습니다. 그런데 해마다 8.15를 거듭 맞으면서 정말 끝난 것은 아니라는 생각을 하게 됩니다. 온전한 배상을 받고 책임자 처벌을 제 눈으로 똑똑히 봐야 진짜 끝날 수 있겠죠.”
+      - “일본은 우리 할머니들이 돈 한 푼이면, 얼마 던져주면 될 줄 알아도, 천만에! 우리 할머니들이 이렇게 비록 나이가 많아도, 이리 아파도, 우리가 죽을 때까지, 다 죽고 한 사람이 남을 때까지라도 일본 정부하고 싸울 테니까. 우리 할머니들 그리 쉽게 안 죽고, 오래 살 거예요. 독해졌어요. 갈수록 더할 거예요. 일본이 그렇게 만들었어, 우리를.”
+    김복동:
+      name: 김복동 할머니
+      lifespan: 1926~2019
+      message: "“우리는 죽으면 죽었지. 그런 돈은 받기 싫습니다.”"
+      src: https://womenandwar.net/kr/wp-content/uploads/2018/08/%E1%84%80%E1%85%B5%E1%86%B7%E1%84%87%E1%85%A9%E1%86%A8%E1%84%83%E1%85%A9%E1%86%BC_%E1%84%92%E1%85%A1%E1%86%AF%E1%84%86%E1%85%A5%E1%84%82%E1%85%B5_crop-300x300.jpg
+      body:
+      -
+      -
+      testimony:
+      - 
+      -
+    황금주:
+      name: 황금주 할머니
+      lifespan: 1922~2013
+      message: "“진정으로 사죄하고 내 청춘을 돌려 놓아라.”"
+      src: https://womenandwar.net/kr/wp-content/uploads/2018/08/%E1%84%92%E1%85%AA%E1%86%BC%E1%84%80%E1%85%B3%E1%86%B7%E1%84%8C%E1%85%AE_%E1%84%92%E1%85%A1%E1%86%AF%E1%84%86%E1%85%A5%E1%84%82%E1%85%B5_crop-300x300.jpg
+      body:
+      - 황금주 할머니는 1922년 충청남도 부여에서 태어나셨습니다. 13세 때에 함흥의 부잣집에 양녀로 들어가 양모의 배려로 17살부터 2년 동안 함성여자강습소라는 곳에서 일본어와 산수를 배웠습니다.
+      -
+      testimony:
+      - 
+      -
+    김학순:
+      name: 김학순 할머니
+      lifespan: 1924~1997
+      message: "“언젠가는 밝혀져야 할 ‘역사적 사실’이기에 털어놓기로 했습니다.”"
+      src: https://womenandwar.net/kr/wp-content/uploads/2018/08/%E1%84%80%E1%85%B5%E1%86%B7%E1%84%92%E1%85%A1%E1%86%A8%E1%84%89%E1%85%AE%E1%86%AB-%E1%84%92%E1%85%A1%E1%86%AF%E1%84%86%E1%85%A5%E1%84%82%E1%85%B5_crop-300x300.jpg
+      body:
+      -
+      -
+      testimony:
+      - 
+      -
+    송신도:
+      name: 송신도 할머니
+      lifespan: 1922~ 2017
+      message: "“나의 마음은 지지 않았습니다.”"
+      src: https://womenandwar.net/kr/wp-content/uploads/2018/08/%E1%84%89%E1%85%A9%E1%86%BC%E1%84%89%E1%85%B5%E1%86%AB%E1%84%83%E1%85%A9-%E1%84%92%E1%85%A1%E1%86%AF%E1%84%86%E1%85%A5%E1%84%82%E1%85%B5_crop-300x300.jpg
+      body:
+      -
+      -
+      testimony:
+      - 
+      -
+    이용수:
+      name: 이용수 할머니
+      lifespan: 1928~현재
+      message: "“잘못된 역사는 감춘다고 해서 사라지는 것이 아니에요.”"
+      src: https://womenandwar.net/kr/wp-content/uploads/2018/10/06201027cha-kwedonojo-55-e1540188479484-300x300.jpg
+      body:
+      -
+      -
+      testimony:
+      - 
+      -
+    정서운:
+      name: 정서운 할머니
+      lifespan: 1924~2004
+      message: "“단 한사람이라도 우리의 문제를 더 가르쳐야 합니다.”"
+      src: https://womenandwar.net/kr/wp-content/uploads/2018/08/%E1%84%8C%E1%85%A5%E1%86%BC%E1%84%89%E1%85%A5%E1%84%8B%E1%85%AE%E1%86%AB-%E1%84%92%E1%85%A1%E1%86%AF%E1%84%86%E1%85%A5%E1%84%82%E1%85%B5_crop-300x300.jpg
+      body:
+      -
+      -
+      testimony:
+      - 
+      -
+    안점순:
+      name: 안점순 할머니
+      lifespan: 1928~ 2018
+      message: "“울기도 많이 울고, 노다지 눈물로 세월을 보냈지.”"
+      src: https://womenandwar.net/kr/wp-content/uploads/2018/08/%E1%84%8B%E1%85%A1%E1%86%AB%E1%84%8C%E1%85%A5%E1%86%B7%E1%84%89%E1%85%AE%E1%86%AB-%E1%84%92%E1%85%A1%E1%86%AF%E1%84%86%E1%85%A5%E1%84%82%E1%85%B5_crop-300x300.jpg
+      body:
+      -
+      -
+      testimony:
+      - 
+      -
+    문필기:
+      name: 문필기 할머니
+      lifespan: 1925~2008
+      message: "“평생 가슴에 못 박고 잊지 못할 상처를 안고 죽을지도 몰라.”"
+      src: https://womenandwar.net/kr/wp-content/uploads/2018/08/%E1%84%86%E1%85%AE%E1%86%AB%E1%84%91%E1%85%B5%E1%86%AF%E1%84%80%E1%85%B5-%E1%84%92%E1%85%A1%E1%86%AF%E1%84%86%E1%85%A5%E1%84%82%E1%85%B5_crop-300x300.jpg
+      body:
+      -
+      -
+      testimony:
+      - 
+      -                                        
 en:
