--- a/data/admission_guide.yml
+++ b/data/admission_guide.yml
@@ -451,9 +451,9 @@ en:
   온라인예약이동: Make Online Reservation
 
   소식참여:
-    title: Support Us!
+    title: Donate!
     일시후원신청하기:
-      title: Support Us!
+      title: Donate!
       body:
       - Donate to the Korean Council via bank wire transfer! (You can use money transfer sites such as wise.com)
       - "Account number: 069137-04-014198"
