테마 업데이트 및 categories term 목록 화면을 액션.캠페인 화면으로 사용합니다.

--- a/config/_default/menus.yml
+++ b/config/_default/menus.yml
@@ -99,7 +99,7 @@ main:
     weight: 3
     parent: 소식    
   - name: 액션·캠페인
-    url: /campaign
+    url: /categories
     weight: 4
     parent: 소식
   - name: 성명·논평
